<?xml version="1.0" encoding="utf-8"?>
   <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recipeScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical">
   
   <TableLayout
            android:id="@+id/RecipeTableLayout1"
    		android:layout_width="match_parent"
    		android:layout_height="match_parent" >
              
            <TableRow
        		android:id="@+id/RecipeTableRow1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
  
  				<TextView android:id="@+id/recipeName_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="25dip"
	            android:textStyle="bold"
	            android:paddingTop="10dip"
	            android:paddingBottom="10dip"
	            android:textColor="#43bd00"
	             />
  			</TableRow>
  	
            <TableRow
        		android:id="@+id/RecipeTableRow1.1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
  
  				<ImageView android:id="@+id/image_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
  			</TableRow>
  	
            
	  			 <TableRow
        		 android:id="@+id/RecipeTableRow2.1"
        		 android:layout_width="wrap_content"
        		 android:layout_height="wrap_content" >
	  			
	  			<LinearLayout
	  			 android:layout_width="wrap_content"
        		 android:layout_height="wrap_content">
        		 
	  			<RatingBar
		        android:id="@+id/ratingBar"
		        android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	style="?android:attr/ratingBarStyleSmall"
            	android:numStars="5"
            	android:stepSize="0.1"
            	android:isIndicator="true"
            	android:layout_gravity="center_horizontal" />
				</LinearLayout>
	  		</TableRow>	
	  		
            <TableRow
        		android:id="@+id/RecipeTableRow3"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  			
	  			<TextView android:id="@+id/ingredient_heading"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:text="@string/ingredientHeading"
	            android:textStyle="bold"/>
	  		</TableRow>
            <TableRow
        		android:id="@+id/RecipeTableRow3.1.1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
 				<TextView android:id="@+id/ingredient_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"/>
 			</TableRow>
 			
            <TableRow
        		android:id="@+id/RecipeTableRow3.1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  			
	  			<TextView android:id="@+id/timeHeading"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:layout_weight="1"
	            android:text="@string/timeHeading"
	            android:textStyle="bold"
	            />	
                
 				<TextView android:id="@+id/time_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            />
 			</TableRow>
 			
            <TableRow
        		android:id="@+id/RecipeTableRow3.2"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  			
                <TextView android:id="@+id/serveHeading"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:layout_weight="1"
	            android:text="@string/serveHeading"
	            android:textStyle="bold"/>	
                	
 				<TextView android:id="@+id/yield_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            />
 			</TableRow>
 			<TableRow
        		android:id="@+id/RecipeTableRow3.3"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  				
 			    <TextView android:id="@+id/sourceHeading"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:layout_weight="1"
	            android:text="@string/sourceHeading"
	            android:textStyle="bold"/>	
                
 				<TextView android:id="@+id/sourcename_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            />
 			</TableRow>
 			
 			<TableRow
        		android:id="@+id/RecipeTableRow3.4"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  				
 				<Button android:id="@+id/sourceurl_label"
	            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/url_button"
				android:onClick="recipeDetail"/>
 			</TableRow>
 			
            
            
            <TableRow
        		android:id="@+id/RecipeTableRow4"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  				
 				<Button
                android:id="@+id/buy_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy_button"
                android:onClick="buyIngredients"/>
 			</TableRow>
 			
            <TableRow
        		android:id="@+id/RecipeTableRow5"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  				
 				<ImageButton
                android:id="@+id/share_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/share"
                android:onClick="facebookLoginShare"/>
 			</TableRow>
 			
            <TableRow
        		android:id="@+id/RecipeTableRow5.1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >
	  				
 				<Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/facebook_logout"
                android:visibility="gone"/>
 			</TableRow>
 			
 	</TableLayout>	

</LinearLayout>
</ScrollView>
